--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -58,3 +58,6 @@ development:
 
     # Ensure all times are UTC in the app side. (default: false)
     # use_utc: false
+
+production:
+  uri: <%= ENV['MONGOLAB_URI'] %>
