add session to production mongoid settings

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -60,4 +60,6 @@ development:
     # use_utc: false
 
 production:
-  uri: <%= ENV['MONGOLAB_URI'] %>
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
